// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode attach --help 1`] = `
"spinosa attach <url>

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to SPINOSA_SERVER_PASSWORD)             [string]
  -u, --username      basic auth username (defaults to SPINOSA_SERVER_USERNAME or 'opencode')
                                                                                            [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode run --help 1`] = `
"spinosa run [message..]

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose      print boot diagnostics to stderr                                      [boolean]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running spinosa server (e.g., http://localhost:4096)       [string]
  -p, --password     basic auth password (defaults to SPINOSA_SERVER_PASSWORD)              [string]
  -u, --username     basic auth username (defaults to SPINOSA_SERVER_USERNAME or 'opencode')[string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode debug --help 1`] = `
"spinosa debug

Commands:
  spinosa debug config        show resolved configuration
  spinosa debug lsp           LSP debugging utilities
  spinosa debug rg            ripgrep debugging utilities
  spinosa debug file          file system debugging utilities
  spinosa debug scrap         list all known projects
  spinosa debug skill         list all available skills
  spinosa debug snapshot      snapshot debugging utilities
  spinosa debug startup       print startup timing
  spinosa debug agent <name>  show agent configuration details
  spinosa debug v2            debug v2 catalog and built-in plugins
  spinosa debug info          show debug information
  spinosa debug paths         show global paths (data, config, cache, state)
  spinosa debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose     print boot diagnostics to stderr                                       [boolean]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers --help 1`] = `
"spinosa providers

manage AI providers and credentials

Commands:
  spinosa providers list               list providers and credentials                  [aliases: ls]
  spinosa providers login [url]        log in to a provider
  spinosa providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose     print boot diagnostics to stderr                                       [boolean]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent --help 1`] = `
"spinosa agent

manage agents

Commands:
  spinosa agent create  create a new agent
  spinosa agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose     print boot diagnostics to stderr                                       [boolean]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode upgrade --help 1`] = `
"spinosa upgrade [target]

check for and install Spinosa updates

Positionals:
  target  target version (alias: --version)                                                 [string]

Options:
  -h, --help             show help                                                         [boolean]
      --print-logs       print logs to stderr                                              [boolean]
      --log-level        log level              [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose          print boot diagnostics to stderr                                  [boolean]
      --pure             run without external plugins                                      [boolean]
      --version          target version to install (alias of the positional target)         [string]
      --channel          release channel (stable or beta)       [string] [choices: "stable", "beta"]
      --yes              skip confirmation prompts                                         [boolean]
      --reinstall        reinstall the target version even if it matches the installed version
                                                                                           [boolean]
      --allow-downgrade  permit downgrading to an older version                            [boolean]
      --check            check for updates without installing                              [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode uninstall --help 1`] = `
"spinosa uninstall

remove the Spinosa framework runtime and selected application data

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose      print boot diagnostics to stderr                                      [boolean]
      --pure         run without external plugins                                          [boolean]
  -y, --yes          skip confirmation prompts                            [boolean] [default: false]
  -f, --force        alias for --yes                                      [boolean] [default: false]
  -c, --keep-config  keep XDG configuration files                         [boolean] [default: false]
  -d, --keep-data    keep XDG session data and state                      [boolean] [default: false]
      --dry-run      show what would be removed                           [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode serve --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode models --help 1`] = `
"spinosa models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --pure        run without external plugins                                           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode export --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode import --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode pr --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode plugin --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db --help 1`] = `
"spinosa db

Commands:
  spinosa db [query]     open an interactive sqlite3 shell or run a query                  [default]
  spinosa db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose     print boot diagnostics to stderr                                       [boolean]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp list --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp add --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp auth --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp logout --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers list --help 1`] = `
"spinosa providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose     print boot diagnostics to stderr                                       [boolean]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers login --help 1`] = `
"spinosa providers login [url]

log in to a provider

Positionals:
  url  spinosa auth provider                                                                [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose     print boot diagnostics to stderr                                       [boolean]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers logout --help 1`] = `
"spinosa providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose     print boot diagnostics to stderr                                       [boolean]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent create --help 1`] = `
"spinosa agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose               print boot diagnostics to stderr                             [boolean]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent list --help 1`] = `
"spinosa agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose     print boot diagnostics to stderr                                       [boolean]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session list --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session delete --help 1`] = `
"███████╗██████╗ ██╗███╗   ██╗ ██████╗ ███████╗ █████╗ 
██╔════╝██╔══██╗██║████╗  ██║██╔═══██╗██╔════╝██╔══██╗
███████╗██████╔╝██║██╔██╗ ██║██║   ██║███████╗███████║
╚════██║██╔═══╝ ██║██║╚██╗██║██║   ██║╚════██║██╔══██║
███████║██║     ██║██║ ╚████║╚██████╔╝███████║██║  ██║
╚══════╝╚═╝     ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝

Commands:
  spinosa [project]           start the Spinosa TUI                                        [default]
  spinosa new <source>        Create a new Spinosa workspace from a source directory
                                                                                   [aliases: create]
  spinosa add [source]        Add files or directories to a Spinosa workspace
  spinosa update [workspace]  Update a workspace snapshot
  spinosa status [workspace]  Show workspace and framework status
  spinosa list                List all Spinosa workspaces
  spinosa doctor              Diagnose Spinosa framework and workspace health
  spinosa providers           manage AI providers and credentials                    [aliases: auth]
  spinosa agent               manage agents
  spinosa upgrade [target]    check for and install Spinosa updates
  spinosa uninstall           remove the Spinosa framework runtime and selected application data
  spinosa models [provider]   list all available models
  spinosa version             Show the installed Spinosa version

Positionals:
  project  path to start Spinosa in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose       print boot diagnostics to stderr                                     [boolean]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: spinosa.local)
                                                                 [string] [default: "spinosa.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db path --help 1`] = `
"spinosa db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --verbose     print boot diagnostics to stderr                                       [boolean]
      --pure        run without external plugins                                           [boolean]"
`;
